--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "gdevilbat/sparda-cms",
+    "name": "gdevilbat/spardacms",
     "type": "project",
     "description": "The Laravel Framework.",
     "keywords": [
