--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "php": "^7.1.3",
         "barryvdh/laravel-debugbar": "^3.2",
         "fideloper/proxy": "^4.0",
-        "gdevilbat/spardacmscore-module": "dev-master",
+        "gdevilbat/spardacmscore": "dev-master",
         "joshbrw/laravel-module-installer": "^0.1.4",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
@@ -39,8 +39,7 @@
     "extra": {
         "laravel": {
             "dont-discover": []
-        },
-        "module-dir": "vendor/gdevilbat"
+        }
     },
     "autoload": {
         "psr-4": {
