--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,10 @@
         "php": "^7.1.3",
         "barryvdh/laravel-debugbar": "^3.2",
         "fideloper/proxy": "^4.0",
-        "gdevilbat/spardacmscore": "dev-master",
+        "gdevilbat/sparda-cms-role-module": "^1.0",
+        "gdevilbat/sparda-cms-account-module": "^1.0",
         "joshbrw/laravel-module-installer": "^0.1.4",
-        "laravel/framework": "5.8.*",
+        "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "nwidart/laravel-modules": "^4.1"
     },
@@ -28,7 +29,11 @@
     "repositories": [
         {
             "type": "git",
-            "url": "https://gitlab.com/maldinuribrahim/spardacms-core"
+            "url": "https://gitlab.com/maldinuribrahim/spardacms-role"
+        },
+        {
+            "type": "git",
+            "url": "https://gitlab.com/maldinuribrahim/spardacms-account"
         }
     ],
     "config": {
@@ -39,7 +44,8 @@
     "extra": {
         "laravel": {
             "dont-discover": []
-        }
+        },
+        "module-dir": "vendor/gdevilbat"
     },
     "autoload": {
         "psr-4": {
