--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "barryvdh/laravel-debugbar": "^3.2",
         "fideloper/proxy": "^4.0",
+        "gdevilbat/sparda-cms-core-module": "^5.7",
         "gdevilbat/sparda-cms-role-module": "^1.0",
         "gdevilbat/sparda-cms-account-module": "^1.0",
         "joshbrw/laravel-module-installer": "^0.1.4",
@@ -27,6 +28,10 @@
         "phpunit/phpunit": "^7.5"
     },
     "repositories": [
+        {
+            "type": "git",
+            "url": "https://gitlab.com/maldinuribrahim/spardacms-core"
+        },
         {
             "type": "git",
             "url": "https://gitlab.com/maldinuribrahim/spardacms-role"
