--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "php": "^7.1.3",
         "barryvdh/laravel-debugbar": "^3.2",
         "fideloper/proxy": "^4.0",
-        "gdevilbat/sparda-cms-core-module": "^5.7.5",
+        "gdevilbat/sparda-cms-core-module": "~5.7",
         "gdevilbat/sparda-cms-role-module": "^1.3",
         "gdevilbat/sparda-cms-account-module": "^1.2",
         "gdevilbat/sparda-cms-user-module": "^1.2",
