--- a/.htaccess
+++ b/.htaccess
@@ -23,6 +23,60 @@
         Allow From All
     </FilesMatch>
 
+    # Extra Security Headers
+    <IfModule mod_headers.c>
+      Header set X-XSS-Protection "1; mode=block"
+      Header always append X-Frame-Options SAMEORIGIN
+      Header set X-Content-Type-Options nosniff
+    </IfModule>
+
+    ## EXPIRES CACHING ##
+    #<IfModule mod_expires.c>
+      #ExpiresActive On
+      #ExpiresByType image/jpg "access 1 month"
+      #ExpiresByType image/jpeg "access 1 month"
+      #ExpiresByType image/gif "access 1 month"
+      #ExpiresByType image/png "access 1 month"
+      #ExpiresByType text/css "access 1 month"
+      #ExpiresByType text/x-javascript "access 1 month"
+      #ExpiresByType text/javascript "access 1 month"
+      #ExpiresByType application/x-shockwave-flash "access 1 month"
+      #ExpiresByType image/x-icon "access 1 year"
+      #ExpiresDefault "access 1 month"
+    #</IfModule>
+    ## EXPIRES CACHING ##
+
+    <IfModule mod_deflate.c>
+      # Compress HTML, CSS, JavaScript, Text, XML and fonts
+      AddOutputFilterByType DEFLATE application/javascript
+      AddOutputFilterByType DEFLATE application/rss+xml
+      AddOutputFilterByType DEFLATE application/vnd.ms-fontobject
+      AddOutputFilterByType DEFLATE application/x-font
+      AddOutputFilterByType DEFLATE application/x-font-opentype
+      AddOutputFilterByType DEFLATE application/x-font-otf
+      AddOutputFilterByType DEFLATE application/x-font-truetype
+      AddOutputFilterByType DEFLATE application/x-font-ttf
+      AddOutputFilterByType DEFLATE application/x-javascript
+      AddOutputFilterByType DEFLATE application/xhtml+xml
+      AddOutputFilterByType DEFLATE application/xml
+      AddOutputFilterByType DEFLATE font/opentype
+      AddOutputFilterByType DEFLATE font/otf
+      AddOutputFilterByType DEFLATE font/ttf
+      AddOutputFilterByType DEFLATE image/svg+xml
+      AddOutputFilterByType DEFLATE image/x-icon
+      AddOutputFilterByType DEFLATE text/css
+      AddOutputFilterByType DEFLATE text/html
+      AddOutputFilterByType DEFLATE text/javascript
+      AddOutputFilterByType DEFLATE text/plain
+      AddOutputFilterByType DEFLATE text/xml
+
+      # Remove browser bugs (only needed for really old browsers)
+      BrowserMatch ^Mozilla/4 gzip-only-text/html
+      BrowserMatch ^Mozilla/4\.0[678] no-gzip
+      BrowserMatch \bMSIE !no-gzip !gzip-only-text/html
+      Header append Vary User-Agent
+    </IfModule>
+
     # Redirect Trailing Slashes If Not A Folder...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule ^(.*)/$ /$1 [L,R=301]
