--- a/composer.json
+++ b/composer.json
@@ -30,20 +30,24 @@
     },
     "repositories": [
         {
+            "name": "gdevilbat/sparda-cms-core-module",
             "type": "vcs",
-            "url": "git@gitlab.com:maldinuribrahim/spardacms-core.git"
+            "url": "https://gitlab.com/maldinuribrahim/spardacms-core.git"
         },
         {
+            "name": "gdevilbat/sparda-cms-role-module",
             "type": "vcs",
-            "url": "git@gitlab.com:maldinuribrahim/spardacms-role"
+            "url": "https://gitlab.com/maldinuribrahim/spardacms-role"
         },
         {
+            "name": "gdevilbat/sparda-cms-account-module",
             "type": "vcs",
-            "url": "git@gitlab.com:maldinuribrahim/spardacms-account"
+            "url": "https://gitlab.com/maldinuribrahim/spardacms-account"
         },
         {
+            "name": "gdevilbat/sparda-cms-user-module",
             "type": "vcs",
-            "url": "git@gitlab.com:maldinuribrahim/spardacms-user"
+            "url": "https://gitlab.com/maldinuribrahim/spardacms-user"
         }
     ],
     "config": {
@@ -59,7 +63,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Modules\\": "Modules/"
         },
         "classmap": [
             "database/seeds",
