--- a/composer.json
+++ b/composer.json
@@ -31,19 +31,19 @@
     "repositories": [
         {
             "type": "vcs",
-            "url": "git@gitlab.com:maldinuribrahim/spardacms-core.git"
+            "url": "https://gitlab.com/maldinuribrahim/spardacms-core.git"
         },
         {
             "type": "vcs",
-            "url": "git@gitlab.com:maldinuribrahim/spardacms-role"
+            "url": "https://gitlab.com/maldinuribrahim/spardacms-role"
         },
         {
             "type": "vcs",
-            "url": "git@gitlab.com:maldinuribrahim/spardacms-account"
+            "url": "https://gitlab.com/maldinuribrahim/spardacms-account"
         },
         {
             "type": "vcs",
-            "url": "git@gitlab.com:maldinuribrahim/spardacms-user"
+            "url": "https://gitlab.com/maldinuribrahim/spardacms-user"
         }
     ],
     "config": {
