--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,8 @@
         "barryvdh/laravel-debugbar": "^3.2",
         "fideloper/proxy": "^4.0",
         "gdevilbat/sparda-cms-core-module": "~5.7",
-        "gdevilbat/sparda-cms-role-module": "^1.3",
         "gdevilbat/sparda-cms-account-module": "^1.2",
-        "gdevilbat/sparda-cms-user-module": "^1.2",
+        "gdevilbat/sparda-cms-user-module": "^2..",
         "joshbrw/laravel-module-installer": "^0.1.4",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
