--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "fideloper/proxy": "^4.0",
         "gdevilbat/sparda-cms-core-module": "~5.7",
         "gdevilbat/sparda-cms-account-module": "^1.2",
-        "gdevilbat/sparda-cms-user-module": "^2..",
+        "gdevilbat/sparda-cms-user-module": "^2.0",
         "joshbrw/laravel-module-installer": "^0.1.4",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
