--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,10 @@
         "php": "^7.1.3",
         "barryvdh/laravel-debugbar": "^3.2",
         "fideloper/proxy": "^4.0",
-        "gdevilbat/sparda-cms-core-module": "~5.8",
         "gdevilbat/sparda-cms-account-module": "^2.0",
+        "gdevilbat/sparda-cms-core-module": "~5.8",
         "gdevilbat/sparda-cms-user-module": "^3.0",
+        "jeremykenedy/laravel-exception-notifier": "^1.2",
         "joshbrw/laravel-module-installer": "^0.1.4",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
