--- a/docker/vhost.conf
+++ b/docker/vhost.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     index index.php index.html;
-    root /var/www/;
+    root /var/www;
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
