--- a/docker/vhost.conf
+++ b/docker/vhost.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     index index.php index.html;
-    root /var/www;
+    root /var/www/html;
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
@@ -9,7 +9,7 @@ server {
 
     location ~ \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass app:9000;
+        fastcgi_pass fpm:9000;
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
