--- a/docker/000-default.conf
+++ b/docker/000-default.conf
@@ -6,9 +6,10 @@
 	# match this virtual host. For the default virtual host (this file) this
 	# value is not decisive as it is used as a last resort host regardless.
 	# However, you must set it for any further virtual host explicitly.
-	ServerName dev-local.spardacms.com
+	#ServerName localhost
 
-	ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://fpm:9000/var/www/html/index.php/$1
+	ProxyPassMatch ^/(index\.php(/.*)?)$ fcgi://fpm:9000/var/www/html/$0/$1
+	SetEnvIf Authorization "(.*)" HTTP_AUTHORIZATION=$1
 
 	ServerAdmin webmaster@localhost
 	DocumentRoot /var/www/html
